# kchat

./: README.md  pyproject.toml
src/kchat/kafka/: .pdchat.py.swp  cs.py  cschat.py  multichat.py  pd.py  pdchat.py
