[project]
name = "kchat"
version = "0.3.0"
description = "python message app using kafka"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = [
    "kafka-python>=2.0.2",
    "tqdm>=4.66.5",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test =["pytest>=8.3.2"]

[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
kchat-ping = 'kchat.cli:ping'
